test/fails/bad_functions/overloading.lgl
int f(int x) {
    return x;
}

float f(int x) {
    return 1.;
}

void main() {
    return;
}